--- a/cliente/public/landing.html
+++ b/cliente/public/landing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Tienda</title>
   </head>
   <body>
       <div class="position-relative overflow-hidden">
